--- a/style.css
+++ b/style.css
@@ -4,8 +4,19 @@
   padding: 0;
   box-sizing: border-box;
 }
-iframe {
-  border-radius: 20px;
+.google-maps {
+  margin-top: 50px;
+  position: relative;
+  padding-bottom: 75%;
+  height: 0;
+  overflow: hidden;
+}
+.google-maps iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100% !important;
+  height: 100% !important;
 }
 body {
   background: url("../img/background.jpg") no-repeat center center fixed;
@@ -15,6 +26,7 @@ body {
   background-size: cover;
   height: 100vh;
   width: 100vw;
+  overflow-x: hidden;
 }
 a {
   color: inherit;
