--- a/style.css
+++ b/style.css
@@ -26,11 +26,12 @@ iframe {
   border-radius: 10px;
 }
 body {
-  background: url("../img/background.jpg") no-repeat center center fixed;
+  /* background: url("../img/back.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover;
+  background-size: cover; */
+  background-color: #fafafa;
   height: 100vh;
   width: 100vw;
   overflow-x: hidden;
